# opencv-feedstock

./: .appveyor.yml  .drone.yml  .gitattributes  .travis.yml  README.md  abs.yaml  appveyor.yml  azure-pipelines.yml  conda-forge.yml
recipe/: 0000-bayer2rgba.patch  0001-Added-ocv_update_file-cmake-function.patch  0001-Fix-PyString_AsString-return-type.patch  0001-Fix-for-building-with-old-V4L.patch  0001-LAPACK-add-support-for-complex-numbers-for-MSVC.patch  0001-Use-OpenCV_INSTALL_BINARIES_PREFIX-instead-of-hardco.patch  0001-Use-OpenCV_INSTALL_BINARIES_PREFIX-instead-of-hardcoding.patch  0001-Win32-CONDA_BUILD-Do-not-use-bundled-ffmpeg.patch  0001-cmake-download-tries-customizable-download-parameter.patch  0002-3.4.2-Allow-an-arbitrary-number-of-native-Python-interpret.patch  0002-3.4.5-Allow-an-arbitrary-number-of-native-Python-int.patch  0002-3.4.5-Allow-an-arbitrary-number-of-native-Python-interpret.patch  0002-Allow-an-arbitrary-number-of-native-Python-interpret.patch  0002-Fix-protobuf-Parser-call.patch  0002-Use-OpenCV_INSTALL_BINARIES_PREFIX-instead-of-hardcoding.patch  0002-VS2008-does-not-support-C-11-std-vector-data.patch  0003-2-pythons-Debug-cmake-dependency-stuff.patch  0003-Add-static-inline-double-round-double-for-VC2008.patch  0003-Debug-cmake-dependency-stuff.patch  0003-n-pythons-Debug-cmake-dependency-stuff.patch  0004-2-pythons-Debug-all-variables-in-modules-python-CMak.patch  0004-Specify-template-overload-for-abs-for-VC2008.patch  0004-n-pythons-Debug-all-variables-in-modules-python-CMak.patch  112_win_fix_cmake_config_sufix.patch  CMakeLists.txt  (+63 more)
(+1798 files in other folders)
